--- a/bio.html
+++ b/bio.html
@@ -67,7 +67,7 @@
         </div>         
       </div>
     </div>
-    <div class="footer">
+    <div class="footerbio">
       <h2>Contact</h2>
       <h3>+32 492 73 62 34</h3>
       <h3>ivan.garciajuarez17@gmail.com</h3>
